# cs5030-project

./: .clang-format  .gitignore  CMakeLists.txt  HW3.ipynb  MPI.cpp  MPIandCuda.cpp  MPIandCuda.cu  README.md  gpu.cu  kmeans.hpp  knn.hpp  main  main.cpp  mpi  openmp.cpp  openmp.hpp  openmpi.cpp  serial.cpp  song.hpp  timingGraphs.ipynb  utils.hpp  v.ipynb  v.py  verifier.py  visualize.ipynb
Cuda_Implementation/: utils.hpp
MPI_Implementation/: kmeans.hpp  knn.hpp  main.cpp  song.hpp  utils.hpp  visualize.ipynb
MPIandCuda/: MPIResults.csv  MPIandCuda.hpp  cudaUtils.cuh  helpme.csv  kmeans.hpp  main.cpp  main.cu  utils.hpp
lib/: MPI.hpp  MPIandCuda.hpp  Makefile  cuda.cu  cudaUtils.cuh  kmeans.hpp  openmp.hpp  openmpi.hpp  song.hpp  test.cu  test2.cu  test3.cu  utils.hpp
results/: MPIAndCudaResults.csv  MPIResults.csv  OpenMPResults.csv  cudaResults.csv  serialResults.csv
